--- a/form-sku/angular.json
+++ b/form-sku/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9e422545-abd3-4137-80c5-eec5d5e92248"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
