--- a/Complete course/services-start/angular.json
+++ b/Complete course/services-start/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8de36abb-dfdd-474a-b99d-982106b293e1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
