--- a/real-state/package.json
+++ b/real-state/package.json
@@ -10,23 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/animations": "~12.2.8",
+    "@angular/common": "~12.2.8",
+    "@angular/compiler": "~12.2.8",
+    "@angular/core": "~12.2.8",
+    "@angular/forms": "~12.2.8",
+    "@angular/platform-browser": "~12.2.8",
+    "@angular/platform-browser-dynamic": "~12.2.8",
+    "@angular/router": "~12.2.8",
+    "ag-grid-angular": "^26.1.0",
+    "ag-grid-community": "^26.1.0",
     "file-saver": "^2.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.5",
-    "@angular/cli": "~12.2.5",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "^12.2.8",
+    "@angular/cli": "~12.2.8",
+    "@angular/compiler-cli": "~12.2.8",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.175",
