--- a/real-state/package.json
+++ b/real-state/package.json
@@ -21,6 +21,7 @@
     "ag-grid-angular": "^26.1.0",
     "ag-grid-community": "^26.1.0",
     "file-saver": "^2.0.5",
+    "ngx-indexed-db": "^9.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
